--- a/public/views/akun-saya/index.html
+++ b/public/views/akun-saya/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="text-center mt-3">
                 <h1 class="uppercase text-2xl text-white font-medium font-quicksand">ariefianto rizky</h1>
-                <p class="italic text-sky-200 capitalize text-base font-medium">premium account</p>
+                <p class="italic text-sky-200 capitalize text-base">premium account</p>
             </div>
         </div>
 
