--- a/public/views/dompet/index.html
+++ b/public/views/dompet/index.html
@@ -16,11 +16,11 @@
     <main>
         <div class="w-full h-auto bg-sky-600 rounded-md relative overflow-hidden">
             <div class="w-full h-10 flex items-center justify-end pr-3 bg-sky-800 my-5 z-20">
-                <button
+                <a href="../../pages/top-up-card/index.html"
                     class="flex items-center gap-1 px-5 bg-sky-600 h-full border-l border-l-sky-300 border-r border-r-sky-300">
                     <ion-icon name="add-circle-outline" class="text-white"></ion-icon>
                     <span class="text-white">Top up</span>
-                </button>
+                </a>
             </div>
             <div class="p-5">
                 <h1 class="text-2xl font-medium text-white capitalize font-quicksand">
