--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,6 +9,10 @@ font-family: 'Fira Sans', sans-serif;
 font-family: 'Quicksand', sans-serif;
  */
 
+html {
+    scroll-behavior: smooth;
+}
+
 * {
     font-family: "Fira Sans", sans-serif;
 }
@@ -25,7 +29,7 @@ font-family: 'Quicksand', sans-serif;
     transform: translate(-50%, -50%);
 }
 
-.mobile-detect{
+.mobile-detect {
     display: none;
 }
 
