--- a/src/tailwind/style.css
+++ b/src/tailwind/style.css
@@ -514,20 +514,48 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: relative;
 }
 
-.left-2 {
-  left: 0.5rem;
+.-top-2 {
+  top: -0.5rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.right-2 {
+  right: 0.5rem;
 }
 
 .top-1\/4 {
   top: 25%;
 }
 
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
 .left-1\/2 {
   left: 50%;
+}
+
+.-bottom-10 {
+  bottom: -2.5rem;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
 }
 
 .-bottom-\[60px\] {
@@ -542,48 +570,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: -2.5rem;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.-top-2 {
-  top: -0.5rem;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
-.-bottom-10 {
-  bottom: -2.5rem;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.z-20 {
-  z-index: 20;
+.z-50 {
+  z-index: 50;
 }
 
 .z-10 {
   z-index: 10;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .z-40 {
   z-index: 40;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .my-5 {
@@ -606,6 +606,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 2rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mb-14 {
+  margin-bottom: 3.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -614,28 +630,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0.75rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .mb-10 {
   margin-bottom: 2.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mb-14 {
-  margin-bottom: 3.5rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
 }
 
 .mb-8 {
@@ -658,8 +658,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
-.h-auto {
-  height: auto;
+.h-\[220px\] {
+  height: 220px;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-\[7px\] {
+  height: 7px;
 }
 
 .h-max {
@@ -668,32 +680,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: max-content;
 }
 
-.h-\[350px\] {
-  height: 350px;
+.h-auto {
+  height: auto;
 }
 
-.h-full {
-  height: 100%;
+.h-\[30px\] {
+  height: 30px;
 }
 
-.h-28 {
-  height: 7rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-10 {
-  height: 2.5rem;
+.h-\[110px\] {
+  height: 110px;
 }
 
 .h-\[20px\] {
   height: 20px;
-}
-
-.h-\[120px\] {
-  height: 120px;
 }
 
 .h-\[23px\] {
@@ -708,22 +708,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 28px;
 }
 
-.h-\[220px\] {
-  height: 220px;
-}
-
-.h-\[7px\] {
-  height: 7px;
-}
-
-.h-\[30px\] {
-  height: 30px;
-}
-
-.h-\[110px\] {
-  height: 110px;
-}
-
 .h-\[50px\] {
   height: 50px;
 }
@@ -736,6 +720,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 40px;
 }
 
+.h-\[350px\] {
+  height: 350px;
+}
+
+.h-28 {
+  height: 7rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-\[120px\] {
+  height: 120px;
+}
+
 .h-\[27px\] {
   height: 27px;
 }
@@ -744,28 +744,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 100%;
 }
 
-.w-28 {
-  width: 7rem;
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-\[7px\] {
+  width: 7px;
 }
 
 .w-11\/12 {
   width: 91.666667%;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.w-24 {
-  width: 6rem;
+.w-\[30px\] {
+  width: 30px;
 }
 
 .w-\[20px\] {
   width: 20px;
-}
-
-.w-\[120px\] {
-  width: 120px;
 }
 
 .w-\[23px\] {
@@ -780,20 +776,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 28px;
 }
 
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-\[7px\] {
-  width: 7px;
-}
-
-.w-\[30px\] {
-  width: 30px;
-}
-
 .w-\[50px\] {
   width: 50px;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-\[120px\] {
+  width: 120px;
 }
 
 .w-\[27px\] {
@@ -830,6 +830,14 @@ Ensure the default browser behavior of the `hidden` attribute.
           animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -840,14 +848,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -874,6 +874,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: space-between;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -882,16 +886,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 0.5rem;
 }
 
-.gap-1 {
-  gap: 0.25rem;
-}
-
-.gap-5 {
-  gap: 1.25rem;
-}
-
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .overflow-hidden {
@@ -904,16 +904,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   white-space: nowrap;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border {
@@ -924,8 +928,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 20px;
 }
 
-.border-2 {
-  border-width: 2px;
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-t-4 {
+  border-top-width: 4px;
 }
 
 .border-b {
@@ -940,17 +948,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-left-width: 1px;
 }
 
-.border-t {
-  border-top-width: 1px;
-}
-
-.border-t-4 {
-  border-top-width: 4px;
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
+.border-sky-800\/10 {
+  border-color: rgb(7 89 133 / 0.1);
 }
 
 .border-gray-500 {
@@ -960,15 +969,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .border-sky-800\/50 {
   border-color: rgb(7 89 133 / 0.5);
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-sky-800\/10 {
-  border-color: rgb(7 89 133 / 0.1);
 }
 
 .border-l-sky-300 {
@@ -986,9 +986,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
 }
 
-.bg-sky-500 {
+.bg-red-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-transparent {
@@ -998,6 +998,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.bg-sky-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
 }
 
 .bg-sky-800 {
@@ -1015,19 +1025,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-5 {
@@ -1038,16 +1046,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0.75rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
 .p-1 {
   padding: 0.25rem;
-}
-
-.p-4 {
-  padding: 1rem;
 }
 
 .px-3 {
@@ -1055,30 +1055,30 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 0.75rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+.pr-8 {
+  padding-right: 2rem;
 }
 
 .pl-10 {
   padding-left: 2.5rem;
 }
 
-.pr-6 {
-  padding-right: 1.5rem;
-}
-
 .pr-3 {
   padding-right: 0.75rem;
 }
 
-.pr-8 {
-  padding-right: 2rem;
+.pr-6 {
+  padding-right: 1.5rem;
 }
 
 .text-left {
@@ -1102,21 +1102,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1127,9 +1112,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.25rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .font-medium {
@@ -1138,10 +1142,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .font-semibold {
   font-weight: 600;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .uppercase {
@@ -1156,14 +1156,29 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-style: italic;
 }
 
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-sky-600 {
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .text-sky-500 {
@@ -1176,32 +1191,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-sky-200 {
-  --tw-text-opacity: 1;
-  color: rgb(186 230 253 / var(--tw-text-opacity));
-}
-
-.text-sky-600 {
-  --tw-text-opacity: 1;
-  color: rgb(2 132 199 / var(--tw-text-opacity));
-}
-
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
 .text-white\/60 {
   color: rgb(255 255 255 / 0.6);
 }
 
 .text-white\/80 {
   color: rgb(255 255 255 / 0.8);
+}
+
+.text-sky-200 {
+  --tw-text-opacity: 1;
+  color: rgb(186 230 253 / var(--tw-text-opacity));
 }
 
 .text-red-500 {
@@ -1221,6 +1221,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .opacity-40 {
   opacity: 0.4;
+}
+
+.opacity-100 {
+  opacity: 1;
 }
 
 .shadow-md {
@@ -1291,6 +1295,18 @@ html {
   }
 }
 
+.placeholder\:text-white\/80::-moz-placeholder {
+  color: rgb(255 255 255 / 0.8);
+}
+
+.placeholder\:text-white\/80:-ms-input-placeholder {
+  color: rgb(255 255 255 / 0.8);
+}
+
+.placeholder\:text-white\/80::placeholder {
+  color: rgb(255 255 255 / 0.8);
+}
+
 .placeholder\:text-gray-300::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
@@ -1304,18 +1320,6 @@ html {
 .placeholder\:text-gray-300::placeholder {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-white\/80::-moz-placeholder {
-  color: rgb(255 255 255 / 0.8);
-}
-
-.placeholder\:text-white\/80:-ms-input-placeholder {
-  color: rgb(255 255 255 / 0.8);
-}
-
-.placeholder\:text-white\/80::placeholder {
-  color: rgb(255 255 255 / 0.8);
 }
 
 .placeholder\:text-white::-moz-placeholder {
