--- a/public/views/dompet/index.html
+++ b/public/views/dompet/index.html
@@ -72,7 +72,7 @@
     <footer class="w-full h-auto p-3 px-5 bg-white border-t fixed bottom-0 left-0 z-50">
         <div class="w-full h-auto grid grid-cols-5 gap-5">
             <div class="text-center">
-                <a href="../../../../index.html" class="opacity-40 hover:opacity-100">
+                <a href="../../../index.html" class="opacity-40 hover:opacity-100">
                     <ion-icon class="w-[23px] h-[23px]" name="home-outline"></ion-icon>
                 </a>
             </div>
