--- a/public/views/akun-saya/index.html
+++ b/public/views/akun-saya/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Akun</title>
-    <link rel="stylesheet" href="../../../src/tailwind/style.css">
-    <script src="../../../app.js" type="module"></script>
+    <link rel="stylesheet" href="/src/tailwind/style.css">
+    <script src="/app.js" type="module"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
