--- a/public/views/riwayat/index.html
+++ b/public/views/riwayat/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riwayat Transaksi</title>
 
-    <link rel="stylesheet" href="../../../src/tailwind/style.css">
-    <script src="../../../app.js" type="module"></script>
+    <link rel="stylesheet" href="/src/tailwind/style.css">
+    <script src="/app.js" type="module"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
